# datasling

./: .gitignore  README.md  index.html  main.css  main.js  package-lock.json  package.json  publication.config  publish.py  pyproject.toml  renderer.js  setup.cfg
app/: main.py  requirements.txt
app/modules/: config.py  db.py  df_utils.py  file_utils.py  history_manager.py  info.py  query_processor.py  ui.py
electron/: index.html  main.css  main.js  package-lock.json  package.json
electron/lib/database/: factory.js  presetManager.js
electron/lib/database/connectors/: mssql.js  mysql.js
electron/lib/renderer/: asciiIntro.js  cellManager.js  keyboardShortcuts.js  main.js  presetSelector.js  queryRunner.js  queryTextEditor.js  resultsDisplay.js  rgwfuncsrcMissingHandler.js  tabManager.js
renderer-modules/: asciiIntro.js  cellManager.js  icons.js  keyboardShortcuts.js  resultsDisplay.js  tabManager.js
