[build-system]
requires = ["setuptools>=61.0", "wheel", "fastentrypoints"]
build-backend = "setuptools.build_meta"

[project]
name = "datasling"
version = "0.0.9"
description = "Convert Markdown (.md) files to PDF ..."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT License" }

authors = [
  { name = "Ryan Gerard Wilson", email = "ryan@wilsonfamilyoffice.com" }
]

dependencies = [
  "colorama",
  "pandas",
  "rgwfuncs",
]

classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://ryangerardwilson.com"
Issues   = "https://ryangerardwilson.com/contact"

[project.entry-points."console_scripts"]
datasling = "main:main"
