[metadata]
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = datasling.app, datasling.app.modules
package_dir =
    datasling.app = datasling/app
    datasling.app.modules = datasling/app/modules
python_requires = >=3.10
include_package_data = True
